RESOLVED FIXED214782
Null check inlineStyle in StyledElement::invalidateStyleAttribute
https://bugs.webkit.org/show_bug.cgi?id=214782
Summary Null check inlineStyle in StyledElement::invalidateStyleAttribute
Alex Christensen
Reported 2020-07-25 00:19:37 PDT
Null check inlineStyle in StyledElement::invalidateStyleAttribute
Attachments
Patch (3.28 KB, patch)
2020-07-25 00:20 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2020-07-25 00:20:32 PDT
Alex Christensen
Comment 2 2020-07-25 00:20:34 PDT
Geoffrey Garen
Comment 3 2020-07-26 09:11:00 PDT
Comment on attachment 405224 [details] Patch R=me
EWS
Comment 4 2020-07-27 20:54:01 PDT
Committed r264963: <https://trac.webkit.org/changeset/264963> All reviewed patches have been landed. Closing bug and clearing flags on attachment 405224 [details].
Note You need to log in before you can comment on or make changes to this bug.