Null check inlineStyle in StyledElement::invalidateStyleAttribute https://bugs.webkit.org/show_bug.cgi?id=214782 <rdar://problem/66052987>

Patch by Alex Christensen <achristensen@webkit.org> on 2020-07-27
Reviewed by Geoffrey Garen.

Source/WebCore:

This fixes a reachable crash.

Test: fast/dom/null-inline-style.html

* dom/StyledElement.cpp:
(WebCore::StyledElement::invalidateStyleAttribute):

LayoutTests:

* fast/dom/null-inline-style-expected.txt: Added.
* fast/dom/null-inline-style.html: Added.

Canonical link: https://commits.webkit.org/227675@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264963 268f45cc-cd09-0410-ab3c-d52691b4dbfc