Source/WebCore/dom/StyledElement.cpp
@@ -211,8 +211,10 @@ void StyledElement::styleAttributeChanged(const AtomString& newStyleString, Attr
 
 void StyledElement::invalidateStyleAttribute()
 {
-    if (usesStyleBasedEditability(*inlineStyle()))
-        document().setHasElementUsingStyleBasedEditability();
+    if (auto* inlineStyle = this->inlineStyle()) {
+        if (usesStyleBasedEditability(*inlineStyle))
+            document().setHasElementUsingStyleBasedEditability();
+    }
 
     elementData()->setStyleAttributeIsDirty(true);
     invalidateStyle();
